# pscanner

./: .gitignore  CLAUDE.md  README.md  cavill-cluster-investigation.md  config.toml.example  pyproject.toml  volume-farming-cluster-investigation.md
scripts/: analyze_model.py  backfill_asset_index.py  backfill_close_times.py  expand_cluster.py  parity_build_features.py  profile_live_history.py
src/pscanner/: __init__.py  __main__.py  categories.py  cli.py  config.py  scheduler.py
tests/: conftest.py  test_categories.py  test_cli.py  test_config.py  test_scheduler.py  test_smoke.py
tests/alerts/: test_models.py  test_sink.py  test_terminal.py  test_worker_sink.py
tests/collectors/: test_activity.py  test_base.py  test_events.py  test_market_scoped_trades.py  test_markets.py  test_positions.py  test_ticks.py  test_trades.py  test_watchlist.py
tests/corpus/: _duckdb_fixture.py  _duckdb_scale_fixture.py  conftest.py  test_build_features_sentinel.py  test_cli.py  test_cli_build_features.py  test_db.py  test_duckdb_engine.py  test_enumerator.py  test_examples.py  test_features_compute.py  test_features_interaction.py  test_features_state.py  test_features_streaming.py  test_gamma_tags_backfill.py  test_integration_e2e.py  test_kalshi_e2e.py  test_kalshi_enumerator.py  test_kalshi_walker.py  test_manifold_e2e.py  test_manifold_enumerator.py  test_manifold_walker.py  test_market_walker.py  test_onchain_backfill.py  test_onchain_targeted.py  test_repos_asset_index.py  test_repos_examples.py  test_repos_markets.py  test_repos_resolutions.py  test_repos_trades.py  test_resolutions.py  test_subgraph_ingest.py
tests/daemon/: test_bootstrap.py  test_live_history.py  test_live_history_parity.py
tests/detectors/: test_cluster.py  test_convergence.py  test_gate_model.py  test_mispricing.py  test_monotone.py  test_move_attribution.py  test_polling.py  test_smart_money.py  test_trade_driven.py  test_velocity.py  test_whales.py
tests/fixtures/: activity.json  closed_positions.json  event.json  leaderboard.json  market.json  positions.json  ws_trade.json
tests/kalshi/: test_client.py  test_db.py  test_ids.py  test_models.py  test_repos.py
tests/manifold/: test_client.py  test_db.py  test_ids.py  test_models.py  test_repos.py  test_ws.py
tests/ml/: _capture_eager_baseline.py  conftest.py  test_cli.py  test_metrics.py  test_metrics_volume_bucket.py  test_preprocessing.py  test_streaming.py  test_streaming_platform_filter.py  test_training.py
tests/poly/: test_clob_ws.py  test_data.py  test_gamma.py  test_http.py  test_ids.py  test_onchain.py  test_onchain_ingest.py  test_onchain_rpc.py  test_subgraph.py  test_tick_stream.py
tests/scheduler/: test_gate_model_wiring.py
tests/slow/: test_duckdb_engine_scale.py
tests/store/: test_alerts_repo_unbooked.py  test_db.py  test_market_cache_outcomes.py  (+3 more)
(+152 files in other folders)
